--- a/src/main/resources/ValidRegistrationException.fxml
+++ b/src/main/resources/ValidRegistrationException.fxml
@@ -18,11 +18,9 @@
                 <Insets bottom="50.0" left="45.0" top="50.0" />
             </VBox.margin>
          <graphic>
-            <ImageView fitHeight="48.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@Approved.jpg" />
-               </image>
-            </ImageView>
+             <ImageView fitHeight="48.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
+                 <Image url="@images/Approved.jpg"/>
+             </ImageView>
          </graphic>
         </Label>
     </VBox>
