--- a/src/main/resources/OverviewClient.fxml
+++ b/src/main/resources/OverviewClient.fxml
@@ -14,221 +14,111 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1400.0" style="-fx-background-color: #28252e;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.sre.controllers.MainStageController">
-   <VBox fx:id="VboxAdmin" layoutX="1.0" prefHeight="742.0" prefWidth="301.0" style="-fx-background-color: #10165F;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1138.0" AnchorPane.topAnchor="0.0">
-      <ImageView fitHeight="152.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-         <VBox.margin>
-            <Insets left="90.0" top="10.0" />
-         </VBox.margin>
-         <Image url="@images/Admin.png" />
-      </ImageView>
-      <Button graphicTextGap="20.0" mnemonicParsing="false" onAction="#Home" prefHeight="91.0" prefWidth="300.0" text="HOME">
-         <VBox.margin>
-            <Insets top="10.0" />
-         </VBox.margin>
-         <graphic>
-            <ImageView fitHeight="40.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@images/Home.png" />
-            </ImageView>
-         </graphic>
-         <padding>
-            <Insets left="10.0" />
-         </padding>
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Button>
-      <Button graphicTextGap="10.0" layoutX="10.0" layoutY="330.0" mnemonicParsing="false" onAction="#AddMall" prefHeight="91.0" prefWidth="300.0" text="ADD MALL">
-         <graphic>
-            <ImageView fitHeight="37.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@images/p.png" />
-            </ImageView>
-         </graphic>
-         <padding>
-            <Insets left="30.0" />
-         </padding>
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Button>
-      <Button graphicTextGap="20.0" layoutX="10.0" layoutY="355.0" mnemonicParsing="false" onAction="#handleActionDelete" prefHeight="91.0" prefWidth="300.0" text="DELETE MALL">
-         <graphic>
-            <ImageView fitHeight="33.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@images/Minus.png" />
-            </ImageView>
-         </graphic>
-         <padding>
-            <Insets left="53.0" />
-         </padding>
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Button>
-      <Button graphicTextGap="10.0" layoutX="10.0" layoutY="380.0" mnemonicParsing="false" onAction="#SearchFloor" prefHeight="91.0" prefWidth="300.0" text="SEARCH FLOOR">
-         <graphic>
-            <ImageView fitHeight="35.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@images/Search.png" />
-            </ImageView>
-         </graphic>
-         <padding>
-            <Insets left="60.0" />
-         </padding>
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Button>
-      <Button graphicTextGap="20.0" layoutX="10.0" layoutY="405.0" mnemonicParsing="false" onAction="#SetPrice" prefHeight="91.0" prefWidth="300.0" text="SET PRICE">
-         <graphic>
-            <ImageView fitHeight="33.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@images/p.png" />
-            </ImageView>
-         </graphic>
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-         <padding>
-            <Insets left="30.0" />
-         </padding>
-      </Button>
-      <Button graphicTextGap="20.0" layoutX="10.0" layoutY="430.0" mnemonicParsing="false" prefHeight="91.0" prefWidth="300.0" text="MONEY">
-         <graphic>
-            <ImageView fitHeight="40.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@images/Cash.png" />
-            </ImageView>
-         </graphic>
-         <padding>
-            <Insets left="20.0" />
-         </padding>
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Button>
-      <Button graphicTextGap="20.0" layoutX="10.0" layoutY="455.0" mnemonicParsing="false" prefHeight="91.0" prefWidth="300.0" text="SIGN OUT">
-         <graphic>
-            <ImageView fitHeight="40.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@images/SignOut.png" />
-            </ImageView>
-         </graphic>
-         <padding>
-            <Insets left="30.0" />
-         </padding>
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Button>
-   </VBox>
-   <VBox fx:id="VboxTable" layoutX="295.0" layoutY="93.0" prefHeight="720.0" prefWidth="1105.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="295.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <HBox prefHeight="100.0" prefWidth="200.0">
-         <Label text="Mall`s list" textFill="WHITE">
-            <font>
-               <Font name="System Bold" size="38.0" />
-            </font>
-            <HBox.margin>
-               <Insets left="450.0" top="20.0" />
-            </HBox.margin>
-         </Label>
-      </HBox>
-      <VBox prefHeight="620.0" prefWidth="1105.0">
-         <TableView fx:id="Table" prefHeight="600.0" prefWidth="1087.0">
-            <columns>
-               <TableColumn fx:id="TableName" prefWidth="345.0" text="Name" />
-               <TableColumn fx:id="TableAdress" prefWidth="383.0" text="Adress" />
-               <TableColumn fx:id="TableFloors" minWidth="0.0" prefWidth="336.0" text="Location" />
-            </columns>
+<AnchorPane prefHeight="720.0" prefWidth="1400.0" style="-fx-background-color: #28252e;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.sre.controllers.ClientController">
+    <VBox layoutX="1.0" prefHeight="742.0" prefWidth="301.0" style="-fx-background-color: #10165F;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1138.0" AnchorPane.topAnchor="0.0">
+        <ImageView fitHeight="152.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
             <VBox.margin>
-               <Insets bottom="20.0" left="20.0" right="20.0" />
+                <Insets left="90.0" top="10.0" />
             </VBox.margin>
-         </TableView>
-      </VBox>
-   </VBox>
-   <VBox fx:id="VboxAddMall" layoutX="288.0" prefHeight="720.0" prefWidth="1112.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="288.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <HBox prefHeight="145.0" prefWidth="1105.0">
-         <Label prefHeight="56.0" prefWidth="101.0" text="Name" textFill="WHITE">
+            <Image url="@images/Client.png" />
+        </ImageView>
+        <Button graphicTextGap="20.0" mnemonicParsing="false" onAction="#Home" prefHeight="50.0" prefWidth="280.0" style="-fx-background-color: #deab2a; -fx-border-color: #853996; -fx-border-width: 3;" text="HOME">
+            <VBox.margin>
+                <Insets top="70.0" />
+            </VBox.margin>
+            <graphic>
+                <ImageView fitHeight="40.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                    <Image url="@images/Home.png" />
+                </ImageView>
+            </graphic>
+            <padding>
+                <Insets left="10.0" />
+            </padding>
             <font>
-               <Font name="System Bold" size="26.0" />
+                <Font name="System Bold" size="15.0" />
             </font>
-            <HBox.margin>
-               <Insets left="190.0" top="50.0" />
-            </HBox.margin>
-         </Label>
-         <Label layoutX="10.0" layoutY="10.0" prefHeight="56.0" prefWidth="101.0" text="Adress" textFill="WHITE">
+        </Button>
+        <Button graphicTextGap="10.0" layoutX="10.0" layoutY="380.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="280.0" style="-fx-background-color: #deab2a; -fx-border-color: #853996; -fx-border-width: 3;" text="SEARCH FLOOR">
+            <graphic>
+                <ImageView fitHeight="35.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+                    <Image url="@images/Search.png" />
+                </ImageView>
+            </graphic>
+            <padding>
+                <Insets left="60.0" />
+            </padding>
             <font>
-               <Font name="System Bold" size="26.0" />
+                <Font name="System Bold" size="15.0" />
             </font>
-            <HBox.margin>
-               <Insets left="220.0" top="50.0" />
-            </HBox.margin>
-         </Label>
-         <Label layoutX="111.0" layoutY="10.0" prefHeight="56.0" prefWidth="201.0" text="      Location" textFill="WHITE">
+         <VBox.margin>
+            <Insets top="15.0" />
+         </VBox.margin>
+        </Button>
+        <Button graphicTextGap="20.0" layoutX="10.0" layoutY="455.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="280.0" style="-fx-background-color: #deab2a; -fx-border-color: #853996; -fx-border-width: 3;" text="SIGN OUT">
+            <graphic>
+                <ImageView fitHeight="40.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                    <Image url="@images/SignOut.png" />
+                </ImageView>
+            </graphic>
+            <padding>
+                <Insets left="30.0" />
+            </padding>
             <font>
-               <Font name="System Bold" size="23.0" />
+                <Font name="System Bold" size="15.0" />
             </font>
-            <HBox.margin>
-               <Insets left="220.0" top="50.0" />
-            </HBox.margin>
-         </Label>
-      </HBox>
-      <HBox prefHeight="143.0" prefWidth="1105.0">
-         <TextField fx:id="MallName" prefHeight="40.0" prefWidth="220.0" promptText="Enter name">
-            <HBox.margin>
-               <Insets left="120.0" top="30.0" />
-            </HBox.margin>
-            <font>
-               <Font size="16.0" />
-            </font>
-         </TextField>
-         <TextField fx:id="MallAdress" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="254.0" promptText="Enter Adress">
-            <HBox.margin>
-               <Insets left="100.0" top="30.0" />
-            </HBox.margin>
-            <font>
-               <Font size="16.0" />
-            </font>
-         </TextField>
-         <TextField fx:id="MallFloors" layoutX="230.0" layoutY="10.0" prefHeight="40.0" prefWidth="220.0" promptText="Enter location">
-            <HBox.margin>
-               <Insets left="120.0" top="30.0" />
-            </HBox.margin>
-            <font>
-               <Font size="16.0" />
-            </font>
-         </TextField>
-      </HBox>
-      <HBox prefHeight="226.0" prefWidth="1105.0">
-         <Button mnemonicParsing="false" onAction="#handleAddAction" prefHeight="100.0" prefWidth="243.0" style="-fx-background-color: #4ea451; -fx-border-color: #ffffff; -fx-border-width: 4;" text="SAVE" textFill="WHITE">
-            <HBox.margin>
-               <Insets left="450.0" top="50.0" />
-            </HBox.margin>
-            <font>
-               <Font name="System Bold" size="20.0" />
-            </font>
-         </Button>
-      </HBox>
-   </VBox>
+         <VBox.margin>
+            <Insets top="15.0" />
+         </VBox.margin>
+        </Button>
+    </VBox>
+    <VBox fx:id="VboxTable" layoutX="295.0" layoutY="93.0" prefHeight="720.0" prefWidth="1105.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="295.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <HBox prefHeight="100.0" prefWidth="200.0">
+            <Label text="Mall`s list" textFill="WHITE">
+                <font>
+                    <Font name="System Bold" size="38.0" />
+                </font>
+                <HBox.margin>
+                    <Insets left="450.0" top="20.0" />
+                </HBox.margin>
+            </Label>
+        </HBox>
+        <VBox prefHeight="620.0" prefWidth="1105.0">
+            <TableView fx:id="Table" prefHeight="600.0" prefWidth="1087.0">
+                <columns>
+                    <TableColumn fx:id="TableName" prefWidth="345.0" text="Name" />
+                    <TableColumn fx:id="TableAdress" prefWidth="383.0" text="Adress" />
+                    <TableColumn fx:id="TableFloors" minWidth="0.0" prefWidth="336.0" text="Location" />
+                </columns>
+                <VBox.margin>
+                    <Insets bottom="20.0" left="20.0" right="20.0" />
+                </VBox.margin>
+            </TableView>
+        </VBox>
+    </VBox>
     <VBox fx:id="VboxSearch" layoutX="301.0" layoutY="154.0" prefHeight="720.0" prefWidth="1065.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="301.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <Label prefHeight="45.0" prefWidth="644.0" text="Enter the mall name for displaying it`s floors " textFill="WHITE">
-           <font>
-               <Font size="30.0" />
-           </font>
-           <VBox.margin>
-               <Insets left="250.0" top="80.0" />
-           </VBox.margin>
+            <font>
+                <Font size="30.0" />
+            </font>
+            <VBox.margin>
+                <Insets left="250.0" top="80.0" />
+            </VBox.margin>
         </Label>
         <TextField fx:id="MallSearch" prefHeight="51.0" prefWidth="419.0" promptText="Enter name">
-           <VBox.margin>
-               <Insets left="330.0" right="340.0" top="100.0" />
-           </VBox.margin>
-         <font>
-            <Font size="20.0" />
-         </font>
+            <VBox.margin>
+                <Insets left="330.0" right="340.0" top="100.0" />
+            </VBox.margin>
+            <font>
+                <Font size="20.0" />
+            </font>
         </TextField>
-        <Button mnemonicParsing="false" onAction="#Afisare1" prefHeight="79.0" prefWidth="210.0" style="-fx-background-color: #4ea451; -fx-border-color: #ffffff; -fx-border-width: 4;" text="OK" textFill="WHITE">
-           <VBox.margin>
-               <Insets left="450.0" top="70.0" />
-           </VBox.margin>
-           <font>
-               <Font size="18.0" />
-           </font>
+        <Button mnemonicParsing="false" prefHeight="79.0" prefWidth="210.0" style="-fx-background-color: #4ea451; -fx-border-color: #ffffff; -fx-border-width: 4;" text="OK" textFill="WHITE">
+            <VBox.margin>
+                <Insets left="450.0" top="70.0" />
+            </VBox.margin>
+            <font>
+                <Font size="18.0" />
+            </font>
         </Button>
     </VBox>
     <HBox fx:id="Mall1" layoutX="326.0" layoutY="148.0" prefHeight="720.0" prefWidth="1074.0" style="-fx-border-color: #878676; -fx-border-width: 4;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="326.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -502,9 +392,9 @@
             </Button>
         </VBox>
         <Separator orientation="VERTICAL" prefHeight="200.0">
-           <HBox.margin>
-               <Insets left="30.0" right="30.0" />
-           </HBox.margin>
+            <HBox.margin>
+                <Insets left="30.0" right="30.0" />
+            </HBox.margin>
         </Separator>
         <VBox layoutX="10.0" layoutY="10.0" prefHeight="720.0" prefWidth="160.0">
             <Button fx:id="b1" graphicTextGap="20.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="155.0" style="-fx-background-color: #4ea451;" text="1">
@@ -1041,9 +931,9 @@
             </Button>
         </VBox>
         <Separator orientation="VERTICAL" prefHeight="200.0">
-           <HBox.margin>
-               <Insets left="30.0" right="30.0" />
-           </HBox.margin>
+            <HBox.margin>
+                <Insets left="30.0" right="30.0" />
+            </HBox.margin>
         </Separator>
         <VBox layoutX="10.0" layoutY="10.0" prefHeight="720.0" prefWidth="160.0">
             <Button fx:id="d1" graphicTextGap="20.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="155.0" style="-fx-background-color: #4ea451;" text="1">
@@ -1309,69 +1199,4 @@
             </Button>
         </VBox>
     </HBox>
-    <VBox fx:id="VboxPrice" layoutX="326.0" layoutY="87.0" prefHeight="742.0" prefWidth="1114.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="326.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <TableView fx:id="TablePrice" prefHeight="253.0" prefWidth="914.0">
-            <columns>
-                <TableColumn fx:id="NameMall" prefWidth="305.0" text="NamePrice" />
-                <TableColumn fx:id="Price1Mall" minWidth="0.0" prefWidth="295.0" text="Floor1" />
-                <TableColumn fx:id="Price2Mall" minWidth="0.0" prefWidth="313.0" text="Floor2" />
-            </columns>
-            <VBox.margin>
-                <Insets left="100.0" right="100.0" top="30.0" />
-            </VBox.margin>
-        </TableView>
-        <HBox prefHeight="55.0" prefWidth="1114.0">
-            <VBox.margin>
-                <Insets top="90.0" />
-            </VBox.margin>
-            <Label prefHeight="17.0" prefWidth="224.0" text="Enter mall name :" textFill="WHITE">
-                <font>
-                    <Font size="25.0" />
-                </font>
-                <HBox.margin>
-                    <Insets left="100.0" />
-                </HBox.margin>
-            </Label>
-            <TextField fx:id="MallNameForPrice" prefHeight="33.0" prefWidth="227.0" promptText="Name">
-                <HBox.margin>
-                    <Insets left="50.0" />
-                </HBox.margin>
-            </TextField>
-        </HBox>
-        <HBox layoutX="10.0" layoutY="330.0" prefHeight="55.0" prefWidth="1114.0">
-            <Label prefHeight="17.0" prefWidth="224.0" text="Enter Floor 1 price :" textFill="WHITE">
-                <font>
-                    <Font size="25.0" />
-                </font>
-                <HBox.margin>
-                    <Insets left="100.0" />
-                </HBox.margin>
-            </Label>
-            <TextField fx:id="Price1" prefHeight="33.0" prefWidth="227.0" promptText="Price">
-                <HBox.margin>
-                    <Insets left="50.0" />
-                </HBox.margin>
-            </TextField>
-        </HBox>
-        <HBox layoutX="10.0" layoutY="385.0" prefHeight="55.0" prefWidth="1114.0">
-            <Label prefHeight="17.0" prefWidth="224.0" text="Enter Floor 2 price :" textFill="WHITE">
-                <font>
-                    <Font size="25.0" />
-                </font>
-                <HBox.margin>
-                    <Insets left="100.0" />
-                </HBox.margin>
-            </Label>
-            <TextField fx:id="Price2" prefHeight="33.0" prefWidth="227.0" promptText="Price">
-                <HBox.margin>
-                    <Insets left="50.0" />
-                </HBox.margin>
-            </TextField>
-        </HBox>
-        <Button mnemonicParsing="false" onAction="#handleAddPriceAction" prefHeight="71.0" prefWidth="241.0" text="SUBMIT">
-            <VBox.margin>
-                <Insets left="200.0" top="40.0" />
-            </VBox.margin>
-        </Button>
-    </VBox>
 </AnchorPane>
