--- a/src/main/resources/OverviewClient.fxml
+++ b/src/main/resources/OverviewClient.fxml
@@ -106,7 +106,7 @@
         </VBox>
     </VBox>
     <VBox fx:id="VboxSearch" layoutX="301.0" layoutY="154.0" prefHeight="720.0" prefWidth="1065.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="301.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <Label prefHeight="45.0" prefWidth="644.0" text="Enter the mall name for displaying it`s floors " textFill="WHITE">
+        <Label prefHeight="45.0" prefWidth="644.0" text="Enter the mall's name for displaying it`s floors " textFill="WHITE">
             <font>
                 <Font size="30.0" />
             </font>
